RESOLVED FIXED161478
YouTube Flash plug-in replacement facility should not insert showinfo=0 into iframe URLs
https://bugs.webkit.org/show_bug.cgi?id=161478
Summary YouTube Flash plug-in replacement facility should not insert showinfo=0 into ...
Ricky Mondello
Reported 2016-08-31 23:41:55 PDT
YouTube Flash plug-in replacement facility should not insert showinfo=0 into iframe URLs We tack `showinfo=0` onto the query of all of our transformed YouTube URLs. This means that the YouTube videos don’t have a title on them, which makes them feel foreign compared to almost all other YouTube videos. The overlay information is helpful, not harmful. We should stop tacking `showinfo=0` onto the query of our transformed YouTube URLs.
Attachments
first attempt (6.26 KB, patch)
2016-08-31 23:50 PDT, Ricky Mondello
no flags
second attempt (6.20 KB, patch)
2016-08-31 23:52 PDT, Ricky Mondello
eric.carlson: review+
eric.carlson: commit-queue-
this one should apply to trunk (6.21 KB, patch)
2016-09-01 12:39 PDT, Ricky Mondello
eric.carlson: review+
buildbot: commit-queue-
Archive of layout-test-results from ews102 for mac-yosemite (875.27 KB, application/zip)
2016-09-01 13:29 PDT, Build Bot
no flags
Archive of layout-test-results from ews107 for mac-yosemite-wk2 (1011.37 KB, application/zip)
2016-09-01 13:32 PDT, Build Bot
no flags
Also fixing up a LayoutTest (7.88 KB, patch)
2016-09-01 13:43 PDT, Ricky Mondello
no flags
Fix up expected results for some ios-simulator Layout Tests, too (11.52 KB, patch)
2016-09-01 14:45 PDT, Ricky Mondello
no flags
Reviewed, has passes EWS, ready to land (11.51 KB, patch)
2016-09-01 15:35 PDT, Ricky Mondello
no flags
Ricky Mondello
Comment 1 2016-08-31 23:50:31 PDT
Created attachment 287605 [details] first attempt This builds on https://bugs.webkit.org/show_bug.cgi?id=161476, so it won't build in EWS. Sending out for earlier feedback. If this lands, it will land after 161476 does.
Ricky Mondello
Comment 2 2016-08-31 23:52:36 PDT
Created attachment 287606 [details] second attempt This won't build until https://bugs.webkit.org/show_bug.cgi?id=161476 lands. EWS will fail for that reason.
Eric Carlson
Comment 3 2016-09-01 09:23:18 PDT
Comment on attachment 287606 [details] second attempt r=me
Ricky Mondello
Comment 4 2016-09-01 12:39:17 PDT
Created attachment 287655 [details] this one should apply to trunk
Build Bot
Comment 5 2016-09-01 13:29:00 PDT
Comment on attachment 287655 [details] this one should apply to trunk Attachment 287655 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1988936 New failing tests: security/contentSecurityPolicy/plugins-types-allows-youtube-plugin-replacement.html
Build Bot
Comment 6 2016-09-01 13:29:06 PDT
Created attachment 287667 [details] Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7 2016-09-01 13:32:31 PDT
Comment on attachment 287655 [details] this one should apply to trunk Attachment 287655 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1988941 New failing tests: security/contentSecurityPolicy/plugins-types-allows-youtube-plugin-replacement.html
Build Bot
Comment 8 2016-09-01 13:32:35 PDT
Created attachment 287669 [details] Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Ricky Mondello
Comment 9 2016-09-01 13:43:33 PDT
Created attachment 287670 [details] Also fixing up a LayoutTest
Ricky Mondello
Comment 10 2016-09-01 14:45:31 PDT
Created attachment 287685 [details] Fix up expected results for some ios-simulator Layout Tests, too
Ricky Mondello
Comment 11 2016-09-01 15:35:26 PDT
Created attachment 287692 [details] Reviewed, has passes EWS, ready to land
WebKit Commit Bot
Comment 12 2016-09-01 16:06:16 PDT
Comment on attachment 287692 [details] Reviewed, has passes EWS, ready to land Clearing flags on attachment: 287692 Committed r205326: <http://trac.webkit.org/changeset/205326>
WebKit Commit Bot
Comment 13 2016-09-01 16:06:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.