YouTube Flash plug-in replacement facility should not insert showinfo=0 into iframe URLs https://bugs.webkit.org/show_bug.cgi?id=161478 <rdar://problem/28050847>

Patch by Ricky Mondello <rmondello@apple.com> on 2016-09-01
Reviewed by Eric Carlson.

Source/WebCore:

* Modules/plugins/YouTubePluginReplacement.cpp:
(WebCore::YouTubePluginReplacement::youTubeURLFromAbsoluteURL): Stop adding the query parameter.

Tools:

* TestWebKitAPI/Tests/WebCore/YouTubePluginReplacement.cpp:
(TestWebKitAPI::TEST_F): Update expected results.

LayoutTests:

* platform/ios-simulator/ios/plugin/youtube-flash-plugin-iframe-expected.txt: Update the URL that was blocked.
* platform/ios-simulator/ios/plugin/youtube-flash-plugin-iframe-no-height-or-width-expected.txt: Ditto.
* security/contentSecurityPolicy/plugins-types-allows-youtube-plugin-replacement-expected.txt: Ditto.

Canonical link: https://commits.webkit.org/179665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205326 268f45cc-cd09-0410-ab3c-d52691b4dbfc